--- a/search_engine-master/search/templates/google_images_search.html
+++ b/search_engine-master/search/templates/google_images_search.html
@@ -84,10 +84,24 @@
 {#  </div>#}
 
 
-{% for result in results %}
+{#{% for result in results %}#}
+{#    <div class="col">#}
+{#      <div class="card">#}
+{#        <img src="{{ result.4 }}" class="card-img-top" alt="Link is broken">#}
+{#      </div>#}
+{#    </div>#}
+{#  {% empty %}#}
+{#    <p>No results found.</p>#}
+{#  {% endfor %}#}
+
+
+
+
+  {% for i in images %}
     <div class="col">
       <div class="card">
-        <img src="{{ result.4 }}" class="card-img-top" alt="Link is broken">
+          <a href="{{ i.hostUrl }}">
+        <img src="{{ i.url }}" class="card-img-top" alt="Link is broken"></a>
       </div>
     </div>
   {% empty %}
@@ -97,19 +111,15 @@
 
 
 
-  {% for url in bing_result_images %}
-    <div class="col">
-      <div class="card">
-        <img src="{{ url }}" class="card-img-top" alt="{{ query }}">
-      </div>
-    </div>
-  {% empty %}
-    <p>No results found.</p>
-  {% endfor %}
+
 
 </div>
 
-
+<div style=" padding-left: 222px;">
+    {% for i in page_obj.paginator.page_range %}
+    <a href="?q={{ query }}&page={{ i }}">{{ i }}</a>
+{% endfor %}
+</div>
 
   </div>
 
