--- a/search_engine-master/search/templates/news.html
+++ b/search_engine-master/search/templates/news.html
@@ -78,7 +78,7 @@
    {% elif limite_I %}
       <p style="padding-left: 222px;"> Search ( I: )  </p>
   {% else %}
-      <p style="padding-left: 222px;">  Specific websites search </p>
+      <p style="padding-left: 222px;">  Custom websites search </p>
   {% endif %}
 
 
@@ -111,6 +111,102 @@
 
 
 {% endif %}
+
+
+
+
+
+{% if custom_s %}
+        <ul id="search-results" style="list-style-type: none; padding-left: 222px;">
+          {% for item in results_concurrent.0.webPages.value  %}
+            <li>
+              <h2><a href="{{ item.url }}">{{ item.name }}</a></h2>
+                <a href="{{ item.displayUrl }}">{{ item.displayUrl }}</a>
+              <p> {{ item.snippet  }}
+              </p>
+            </li>
+          {% empty %}
+            <li>No results found.</li>
+          {% endfor %}
+    </ul>
+
+{% endif %}
+
+
+
+ {% if results %}
+
+                <ul id="search-results" style="list-style-type: none; padding-left: 222px;">
+      {% for result in results %}
+          <li>
+                <h2>{{ result.0 }}</h2><!-- access title using dot notation -->
+                <a href="{{ result.1 }}">{{ result.1 }}</a> <!-- access link using array indexing with variable -->
+                <p>{{ result.2  }}</p> <!-- access snippet using dot notation -->
+          </li>
+            {% empty %}
+    <li>No results found.</li>
+        {% endfor %}
+          </ul>
+
+
+
+        {% if results.has_other_pages %}
+            <div class="pagination" style=" padding-left: 222px;">
+                {% if results.has_previous %}
+                    <a href="?q={{ query }}&page=1">&laquo; first</a>
+                    <a href="?q={{ query }}&page={{ results.previous_page_number }}">previous</a>
+                {% endif %}
+
+                {% for num in results.paginator.page_range %}
+                    {% if num == results.number %}
+                        <span class="current-page">{{ num }}</span>
+                    {% elif num > results.number|add:'-3' and num < results.number|add:'3' %}
+                        <a href="?q={{ query }}&page={{ num }}">{{ num }}</a>
+                    {% endif %}
+                {% endfor %}
+
+                {% if results.has_next %}
+                    <a href="?q={{ query }}&page={{ results.next_page_number }}">next</a>
+                    <a href="?q={{ query }}&page={{ results.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </div>
+        {% endif %}
+
+
+{% endif %}
+
+
+
+
+
+
+
+{#{% for result in results_concurrent.0.webPages.value %}#}
+{#    <p>Name: {{ result.name }}</p>#}
+{#    <p>URL: {{ result.url }}</p>#}
+{#    <p>Snippet: {{ result.snippet }}</p>#}
+{#    <p>Display URL: {{ result.displayUrl }}</p>#}
+{#    <br>#}
+{#{% endfor %}#}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 {#        <ul style="list-style-type: none; padding-left: 222px;">#}
 {##}
