--- a/search_engine-master/search/templates/search.html
+++ b/search_engine-master/search/templates/search.html
@@ -249,7 +249,7 @@
           <ul id="search-results" style="list-style-type: none; padding-left: 222px;">
       {% for result in hits %}
           <li>
-                <h2>{{ result.name }}</h2>
+                <h3>{{ result.title }}</h3>
                 <a href="{{ result.url }}">{{ result.url }}</a>
                 <p>{{ result.content }}</p>
           </li>
